minor change to blog post

--- a/src/content/blog/mse-min.mdx
+++ b/src/content/blog/mse-min.mdx
@@ -22,4 +22,4 @@ Some reasoning you could have is that all even degree polynomials seem to go to 
 
 This is a vague sort of reasoning, but it's essentially the right idea! It misses one slight nuance though, which is that it relies on our polynomials being continuous (this is how we can make our argument that the function can't both go to $-\infty$ and $+\infty$). With that information, we can actually guarantee a global minimum. As long as our function is bounded below and continuous, it must have a minimum.
 
-Why is this important? Well, at the very least, it tells us that looking for a minimum with any of our $L^p$ norms won't be futile, since all norms are bounded below by zero! In particular, MSE is continuous and bounded below, so it has a global minimum. This will be good to know for the future when use MSE time and time again as a loss function.
+Why is this important? Well, at the very least, it tells us that looking for a minimum with any of our $\ell^p$ norms won't be futile, since all norms are bounded below by zero! In particular, MSE is continuous and bounded below, so it has a global minimum. This will be good to know for the future when use MSE time and time again as a loss function.
